# cgraph

./: CMakeLists.txt  cgraph_paths.h  cgraph_topology.h  structural_properties.c
tests/structural_properties/: CMakeLists.txt  shortest_path.c
